DEV/01-NETWORK-DEV/internetgateway.tf
resource "aws_internet_gateway" "igw_env" {
  vpc_id = aws_vpc.vpc_env.id
  
  tags = {
    Name = "pxco001-igw-dev"
  }
}
